--- a/flex布局.html
+++ b/flex布局.html
@@ -118,7 +118,7 @@
 <body>
 <div class="by">
   <div class="header">
-    <div ><img class="logo" src="daojianxiao.github.io/tubiao.png" > </div>
+    <div ><img class="logo" src="imgs/tubiao.png" > </div>
     <div class="nav">
        <div class="nav-item"><a href="#">主页</a></div>
        <div class="nav-item"><a href="#">往期</a></div>
@@ -128,7 +128,7 @@
   </div>
 </div>
 <div class="ad">
-   <a href="#"> <img src="daojianxiao.github.io/datu.jpeg" width="1080px" height="420px"></a>
+   <a href="#"> <img src="imgs/datu.jpeg" width="1080px" height="420px"></a>
 </div>
 <div class="main">
     <div class="main-left">
@@ -140,21 +140,21 @@
             故事开始于多米尼克和布莱恩各自的小队成员带着赦免令回到美国的一年之后。他们过着循规蹈矩的日子，家乡生活的感觉很好。
             然而他们都不知道，危险正在悄然接近，冷血的英国特勤杀手肖出现了。从东京的韩被残忍谋杀，到洛杉矶霍布斯的死里逃生......
            </p>
-             <a href="#"> <img class="imgs" src="daojianxiao.github.io/1.jpg" ></a>
+             <a href="#"> <img class="imgs" src="imgs/1.jpg" ></a>
                </div>
            </div>
             <div class="module-title"><h2><a href="#">寒战</a></h2>
                 <div class="article"><p class="article-item">
             作为亚洲金融中心的香港被称作“最安全的城市”，岂料警局接到一通匿名电话，对方声称劫持了警队的一辆前线冲锋车以及车内
             的五名警员和武器装备。此次事件引起了香港警队高层的高度重视，适逢处长（王敏德 饰）出访国外，此时由鹰派人物......</p>
-                    <a href="#" ><img class="imgs"  src="daojianxiao.github.io/2.jpg" ></a>
+                    <a href="#" ><img class="imgs"  src="imgs/2.jpg" ></a>
                 </div>
            </div>
             <div class="module-title"><h2><a href="#">金刚狼3</a></h2>
                 <div class="article"><p class="article-item">
             故事发生在2029年，彼时，X战警早已经解散，作为为数不多的仅存的变种人，金刚狼罗根（休·杰克曼 Hugh Jackman 饰）和卡
             利班（斯戴芬·莫昌特 Stephen Merchant 饰）照顾着年迈的X教授（帕特里克·斯图尔特 Patrick Stewart 饰）......</p>
-               <a href="#"> <img class="imgs" src="daojianxiao.github.io/6.jpg" ></a>
+               <a href="#"> <img class="imgs" src="imgs/6.jpg" ></a>
                </div>
             </div>
         </div>
