--- a/index.html
+++ b/index.html
@@ -1,20 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta id="viewport" name="viewport" content="width=derice-width";initial-scale="1.0";
-    maximun-scale="1";user-scalable="no"; charset="UTF-8">
+    <meta charset="UTF-8">
     <title>等比例适配布局</title>
     <style type="text/css">
         *{margin: 0;padding: 0;}
-        @media (max-width: 900px) {
-            html { font-size: 15px; }
-        }
-        @media (max-width: 400px) {
-            html { font-size: 13px; }
-        }
+
         .nav{
-            width: 67.5rem;
-            height: 7.8125rem;
+            width: 80%;
+            height: 125px;
             margin: 0 auto;
         }
         .nav-logo{
@@ -38,8 +32,8 @@
             color: #663300;
         }
         .ad{
-            width: 67.5rem;
-            height: 12.5rem;
+            width: 80%;
+            height: 100%;
             background: #663300;
             margin: 0 auto;
         }
@@ -49,7 +43,7 @@
             margin: 2.5em 30em;
         }
         .main{
-            width:67.5rem;
+            width:80%;
             height: 100%;
             margin: 0 auto;
         }
@@ -97,6 +91,20 @@
     </style>
 </head>
 <body>
+<script type="text/javascript">
+    var docEl = document.documentElement,
+        //当设备的方向变化（设备横向持或纵向持）此事件被触发。绑定此事件时，
+        //注意现在当浏览器不支持orientationChange事件的时候我们绑定了resize 事件。
+        //总来的来就是监听当然窗口的变化，一旦有变化就需要重新设置根字体的值
+        resizeEvt = 'orientationchange' in window ? 'orientationchange' : 'resize',
+        recalc = function() {
+            20*(docEl.clientwidth/320)+'px';//设置根字体大小
+            docEl.style.fontSize = ?
+        };
+    //绑定浏览器缩放与加载时间
+    window.addEventListener(resizeEvt, recalc, false);
+    document.addEventListener('DOMContentLoaded', recalc, false);
+</script>
 <div class="nav">
     <div class="nav-logo"><img class="logo" src="images/tubiao.png" ></div>
     <div class="nav-item">
@@ -136,6 +144,7 @@
         <img class="main-item-right" src="images/2.jpg">
         </div>
     </div>
+
 </div>
 <div class="footer">© 2017 XuanMoDing. All Rights Reserved.</div>
 </body>
