--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         *{margin: 0;padding: 0;}
 
         .nav{
-            width: 80%;
+            width: 100%;
             height: 7.8rem;
             margin: 0 auto;
         }
@@ -32,7 +32,7 @@
             color: #663300;
         }
         .ad{
-            width: 80%;
+            width: 100%;
             height: 100%;
             background: #663300;
             margin: 0 auto;
@@ -43,7 +43,7 @@
             margin: 2.5rem 30rem;
         }
         .main{
-            width:80%;
+            width：100%;
             height: 100%;
             margin: 0 auto;
         }
