--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>等比例适配布局</title>
     <style type="text/css">
         *{margin: 0;padding: 0;}
+        html{font-size:20px;}
         .nav{
             width: 80%;
             height: 7.8rem;
