--- a/index.html
+++ b/index.html
@@ -1,58 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta id="viewport" name="viewport" content="width=device-width; initial-scale=1.0 maximum-scale=1; user-scalable=no; charset="UTF-8">
     <title>等比例适配布局</title>
     <style type="text/css">
         *{margin: 0;padding: 0;}
-        html{font-size:32px;}
         .nav{
-            width: 100%;
-            height: 7.8rem;
+            width:1080px;
+            height:125px;
             margin: 0 auto;
         }
         .nav-logo{
             float: left;
-            margin-left: 2.8rem;
-            margin-top: 0.625rem;
+            margin-left: 45px;
+            margin-top:1px;
         }
         .logo{
-            width: 5rem;
-            height: 5rem;
+            width: 80px;
+            height:80px;
         }
         .nav-item{
             float: right;
         }
         .nav-item-title{
             float: left;
-            font-size: 1.6rem;
-            width: 3.75rem;
-            height: 1.25rem;
-            margin: 3.2rem;
+            font-size: 25px;
+            width: 60px;
+            height: 20px;
+            margin:50px;
             color: #663300;
         }
         .ad{
-            width: 100%;
-            height: 100%;
+            width: 1080px;
+            height: 150px;
             background: #663300;
             margin: 0 auto;
         }
         .ad-img{
-            width: 7.5rem;
-            height: 7.5rem;
-            margin: 2.5rem 30rem;
+            width: 120px;
+            height: 120px;
+            margin: 40px 480px;
         }
         .main{
-            width:100%;
+            width:1080px;
             height: 100%;
             margin: 0 auto;
         }
         .main-item{
             width: 100%;
-            height: 11.25rem;
+            height: 180px;
             border-bottom-style: dashed;
             border-bottom-color:red;
-            border-width: 0.0625rem;
+            border-width: 1px;
         }
         .main-article{
             display: flex;
@@ -60,18 +59,18 @@
         }
         .main-item-left{
             flex: 1;
-            line-height:1.875rem;
+            line-height:30px;
             font-family: 宋体;
         }
         .main-item-right{
-            margin-left: 1rem;
-            width: 7.5rem;
-            height: 7.5rem;
+            margin-left: 16px;
+            width: 120px;
+            height: 120px;
         }
         h2{
             color: #900b09;
-            margin-top: 1.25rem;
-            margin-bottom: 1.25rem;
+            margin-top: 20px;
+            margin-bottom: 20px;
         }
         a{
             text-decoration: none;
@@ -82,31 +81,23 @@
             display: block;
         }
         .footer{
-            width: 100%;
+            width: 1080px
             height: 100%;
             display: flex;
             justify-content: center;
             font-weight: bold;
-            margin: 2.5rem;
+            margin: 40px;
         }
     </style>
 </head>
 <body>
 <script>
-    (function (doc, win) {
-        var docEl = doc.documentElement,
-            resizeEvt = 'orientationchange' in window ? 'orientationchange' : 'resize',
-            recalc = function () {
-                var clientWidth = docEl.clientWidth;
-                if (!clientWidth) return;
-                docEl.style.fontSize = 10* (clientWidth / 320) + 'px';
-            };
-
-
-        if (!doc.addEventListener) return;
-        win.addEventListener(resizeEvt, recalc, false);
-        doc.addEventListener('DOMContentLoaded', recalc, false);
-    })(document, window);
+    { var clientWidth=document.documentElement.clientWidth,
+       viewport=document.querySelector('meta[name="viewport"]');
+    viewportScale=clientWidth/640;
+    viewportWidth=640;
+    viewport.setAttribute('content','width='+viewportWidth+',initial-scale='viewportScale+',maximum-scale='+viewportScale+',user-scalable=0');
+    }
 </script>
 
 <div class="nav">
