--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         }
         .ad{
             width: 1080px;
-            height: 150px;
+            height:200px;
             background: #663300;
             margin: 0 auto;
         }
@@ -92,7 +92,8 @@
 </head>
 <body>
 <script>
-    { var clientWidth=document.documentElement.clientWidth,
+        function(){                  
+    var clientWidth=document.documentElement.clientWidth,
        viewport=document.querySelector('meta[name="viewport"]');
     viewportScale=clientWidth/640;
     viewportWidth=640;
