--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <style type="text/css">
         *{margin: 0;padding: 0;}
         .nav{
-            width:640px;
+            width:1080px;
             height:125px;
             margin: 0 auto;
         }
@@ -31,7 +31,7 @@
             color: #663300;
         }
         .ad{
-            width: 640px;
+            width:1080px;
             height:200px;
             background: #663300;
             margin: 0 auto;
@@ -39,10 +39,10 @@
         .ad-img{
             width: 120px;
             height: 120px;
-            margin: 40px 260px;
+            margin: 40px 480px;
         }
         .main{
-            width:640px;
+            width:1080px;
             height: 100%;
             margin: 0 auto;
         }
@@ -81,7 +81,7 @@
             display: block;
         }
         .footer{
-            width: 640px
+            width: 1080px
             height: 100%;
             display: flex;
             justify-content: center;
@@ -93,10 +93,10 @@
 <body>
 <script>
                          
-    var clientWidth=document.documentElement.clientWidth,
+    var clientWidth=document.documentElement.clientWidth;
        viewport=document.querySelector('meta[name="viewport"]');
-    viewportScale=clientWidth/640;
-    viewportWidth=640;
+    viewportScale=clientWidth/320;
+    viewportWidth=320;
     viewport.setAttribute('content','width='+viewportWidth+',initial-scale='viewportScale+',maximum-scale='+viewportScale+',user-scalable=0');
     
 </script>
