--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta id="viewport" name="viewport" content="width=device-width;initial-scale=1.0; maximum-scale=1; user-scalable=no;" charset="UTF-8">
+    <meta  charset="UTF-8">
     <title>等比例适配布局</title>
     <style type="text/css">
         *{margin: 0;padding: 0;}
@@ -91,6 +91,15 @@
     </style>
 </head>
 <body>
+<script>
+                         
+    var clientWidth=document.documentElement.clientWidth,
+       viewport=document.querySelector('meta[name="viewport"]');
+    viewportScale=clientWidth/640;
+    viewportWidth=640;
+    viewport.setAttribute('content','width='+viewportWidth+',initial-scale='viewportScale+',maximum-scale='+viewportScale+',user-scalable=0');
+    
+</script>
 
 <div class="nav">
     <div class="nav-logo"><img class="logo" src="images/tubiao.png" ></div>
