--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta  charset="UTF-8">
+    <meta id="viewport" name="viewport" content="width=device-width;initial-scale=1.0; maximum-scale=1; user-scalable=no;" charset="UTF-8">
     <title>等比例适配布局</title>
     <style type="text/css">
         *{margin: 0;padding: 0;}
