--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 <body>
 <script>
                          
-    var clientWidth=document.documentElement.clientWidth,
+    var clientWidth=document.documentElement.clientWidth;
        viewport=document.querySelector('meta[name="viewport"]');
     viewportScale=clientWidth/320;
     viewportWidth=320;
