--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <style type="text/css">
         *{margin: 0;padding: 0;}
         .nav{
-            width:1080px;
+            width:640px;
             height:125px;
             margin: 0 auto;
         }
@@ -31,7 +31,7 @@
             color: #663300;
         }
         .ad{
-            width:1080px;
+            width:640px;
             height:200px;
             background: #663300;
             margin: 0 auto;
@@ -39,10 +39,10 @@
         .ad-img{
             width: 120px;
             height: 120px;
-            margin: 40px 480px;
+            margin: 40px 260px;
         }
         .main{
-            width:1080px;
+            width:640px;
             height: 100%;
             margin: 0 auto;
         }
@@ -81,8 +81,8 @@
             display: block;
         }
         .footer{
-            width: 1080px
-            height: 100%;
+            width: 640px
+            height: 30px;
             display: flex;
             justify-content: center;
             font-weight: bold;
@@ -93,7 +93,7 @@
 <body>
 <script>
                          
-    var clientWidth=document.documentElement.clientWidth;
+    var clientWidth=document.documentElement.clientWidth,
        viewport=document.querySelector('meta[name="viewport"]');
     viewportScale=clientWidth/320;
     viewportWidth=320;
