--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
        viewport=document.querySelector('meta[name="viewport"]');
     viewportScale=clientWidth/960;
     viewportWidth=960;
-    viewport.setAttribute('content','width='+viewportWidth+',initial-scale='viewportScale+',maximum-scale='+viewportScale+',user-scalable=0');
+    viewport.setAttribute('content','width='+viewportWidth+',initial-scale='+viewportScale+',maximum-scale='+viewportScale+',user-scalable=0');
     
 </script>
 
